--- a/html/mosaic/index.html
+++ b/html/mosaic/index.html
@@ -5,23 +5,25 @@
 </head>
 <body>
 
-<iframe class="tile col1 row1" src="tiles/session.html#C"></iframe>
+<iframe class="tile row1 col1" src="tiles/session.html#C"></iframe>
 
-<iframe class="tile col2 row1" src="tiles/session.html#D"></iframe>
+<!-- <iframe class="tile row1 col2" src="tiles/session.html#D"></iframe> -->
 
-<iframe class="tile col3 row1" src="tiles/announcement.html"></iframe>
+<iframe class="tile row1 col3" src="tiles/announcement.html"></iframe>
 
-<iframe class="tile col1 row2" src="tiles/session.html#E"></iframe>
+<iframe class="tile row2 col1" src="tiles/session.html#E"></iframe>
 
-<iframe class="tile col2 row2" src="tiles/map.html"></iframe>
+<!-- <iframe class="tile row2 col2" src="tiles/map.html"></iframe> -->
 
-<iframe class="tile col3 row2" src="tiles/session.html#F"></iframe>
+<iframe class="tile row2 col3" src="tiles/session.html#F"></iframe>
 
-<iframe class="tile col1 row3" src="tiles/session.html#G"></iframe>
+<iframe class="tile row3 col1" src="tiles/session.html#G"></iframe>
 
-<iframe class="tile col2 row3" src="tiles/session.html#H"></iframe>
+<iframe class="tile row3 col2" src="tiles/session.html#H"></iframe>
 
-<iframe class="tile col3 row3" src="tiles/session.html#I"></iframe>
+<iframe class="tile row3 col3" src="tiles/session.html#I"></iframe>
+
+<iframe id="map" src="tiles/map.html"></iframe>
 
 </body>
 </html>
