--- a/html/mosaic/vertical.html
+++ b/html/mosaic/vertical.html
@@ -6,25 +6,21 @@
 </head>
 <body>
 
-    <iframe class="tile col1 row1" src="tiles/session.html#C"></iframe>
+    <iframe class="tile row1 col1" src="tiles/session.html#D"></iframe>
 
-    <iframe class="tile col2 row1" src="tiles/session.html#D"></iframe>
+    <iframe class="tile row1 col2" src="tiles/session.html#E"></iframe>
 
-    <iframe class="tile col1 row2" src="tiles/session.html#E"></iframe>
+    <iframe class="tile row2 col1" src="tiles/session.html#F"></iframe>
 
-    <iframe class="tile col2 row2" src="tiles/session.html#F"></iframe>
+    <iframe id="map" src="tiles/map.html"></iframe>
 
-    <iframe class="tile col1 row3" src="tiles/map.html"></iframe>
+    <iframe class="tile row3 col1" src="tiles/session.html#G"></iframe>
 
-    <iframe class="tile col2 row3" src="tiles/map.html"></iframe>
+    <iframe class="tile row4 col1" src="tiles/session.html#H"></iframe>
 
-    <iframe class="tile col1 row4" src="tiles/session.html#G"></iframe>
+    <iframe class="tile row4 col2" src="tiles/session.html#I"></iframe>
 
-    <iframe class="tile col2 row4" src="tiles/session.html#H"></iframe>
-
-    <iframe class="tile col1 row5" src="tiles/session.html#I"></iframe>
-
-    <iframe class="tile col2 row5" src="tiles/session.html#J"></iframe>
+    <iframe id="announcement" src="tiles/announcement.html"></iframe>
 
 </body>
 </html>
