Announcement/twitter style updates for vertical mode

--- a/html/madness/vertical.html
+++ b/html/madness/vertical.html
@@ -83,7 +83,8 @@
             left: 0;
             display: block;
             height: 400px;
-            width: 100%;
+            width: 1050px;
+            padding-left: 30px;
             background: #1f1620;
             overflow: hidden;
         }
@@ -97,13 +98,6 @@
             color: #EEE;
             font-size: 25px;
             font-family: "Trebuchet MS";
-        }
-
-        .tweet {
-            float: left;
-            width: 310px;
-            height: 100px;
-            margin: 7px;
         }
 
         #timeline {
