--- a/html/mosaic/vertical.html
+++ b/html/mosaic/vertical.html
@@ -5,22 +5,22 @@
     <link rel="stylesheet" type="text/css" href="css/vertical.css">
 </head>
 <body>
+    <div id="vertical">
+        <iframe class="tile row1 col1" src="tiles/session.html#D"></iframe>
 
-    <iframe class="tile row1 col1" src="tiles/session.html#D"></iframe>
+        <iframe class="tile row1 col2" src="tiles/session.html#E"></iframe>
 
-    <iframe class="tile row1 col2" src="tiles/session.html#E"></iframe>
+        <iframe class="tile row2 col1" src="tiles/session.html#F"></iframe>
 
-    <iframe class="tile row2 col1" src="tiles/session.html#F"></iframe>
+        <iframe id="map" src="tiles/map.html"></iframe>
 
-    <iframe id="map" src="tiles/map.html"></iframe>
+        <iframe class="tile row3 col1" src="tiles/session.html#G"></iframe>
 
-    <iframe class="tile row3 col1" src="tiles/session.html#G"></iframe>
+        <iframe class="tile row4 col1" src="tiles/session.html#H"></iframe>
 
-    <iframe class="tile row4 col1" src="tiles/session.html#H"></iframe>
+        <iframe class="tile row4 col2" src="tiles/session.html#I"></iframe>
 
-    <iframe class="tile row4 col2" src="tiles/session.html#I"></iframe>
-
-    <iframe id="announcement" src="tiles/announcement.html"></iframe>
-
+        <iframe id="announcement" src="tiles/announcement.html" scrolling="no"></iframe>
+    </div>
 </body>
 </html>
