Git is going berserk, asking me to re-commit the same change set I just pushed, will cooperate.

--- a/html/mobile/tags.html
+++ b/html/mobile/tags.html
@@ -30,6 +30,9 @@
 			$.post("http://localhost:8000/filters",
 			// Add your ip here to test with mobile device
 			// $.post("http://92.243.30.77:8000/filters",
+			
+			//my computer
+			// $.post("http://169.254.128.164:8000/filters",	
 
 				{
 					"tags": tags,
@@ -49,14 +52,14 @@
 			<div data-role="content" id="tag_list">
 				<div class="choice_list">
 					<ul data-role="listview" data-theme="a" data-filter="true">
-						<li class="keyword"><a onclick='createFilter(["visualization", "infoviz"])' id="a1" href="phone.html" data-transition="slidedown">Data Visualization</a></li>
-						<li class="keyword"><a onclick='createFilter(["prototyping"])' href="phone.html" data-transition="slidedown">Prototyping</a></li>
-						<li class="keyword"><a onclick='createFilter(["crowdsourcing"])' href="phone.html" data-transition="slidedown">Crowdsourcing</a></li>
-						<li class="keyword"><a onclick='createFilter(["health"])' href="phone.html" data-transition="slidedown">Health</a></li>
-						<li class="keyword"><a onclick='createFilter(["design"])' href="phone.html" data-transition="slidedown">Design</a></li>
-						<li class="keyword"><a onclick='createFilter(["tabletops"])' href="phone.html" data-transition="slidedown">Table Tops</a></li>
-						<li class="keyword"><a onclick='createFilter(["accessibility"])' href="phone.html" data-transition="slidedown">Accessibility</a></li>
-						<li class="keyword"><a onclick='createFilter(["elderly"])' href="phone.html" data-transition="slidedown">Elderly</a></li>
+						<li class="keyword"><a onclick='createFilter(["visualization", "infoviz"])' id="a1" href="index.html" data-transition="slidedown">Data Visualization</a></li>
+						<li class="keyword"><a onclick='createFilter(["prototyping"])' href="index.html" data-transition="slidedown">Prototyping</a></li>
+						<li class="keyword"><a onclick='createFilter(["crowdsourcing"])' href="index.html" data-transition="slidedown">Crowdsourcing</a></li>
+						<li class="keyword"><a onclick='createFilter(["health"])' href="index.html" data-transition="slidedown">Health</a></li>
+						<li class="keyword"><a onclick='createFilter(["design"])' href="index.html" data-transition="slidedown">Design</a></li>
+						<li class="keyword"><a onclick='createFilter(["tabletops"])' href="index.html" data-transition="slidedown">Table Tops</a></li>
+						<li class="keyword"><a onclick='createFilter(["accessibility"])' href="index.html" data-transition="slidedown">Accessibility</a></li>
+						<li class="keyword"><a onclick='createFilter(["elderly"])' href="index.html" data-transition="slidedown">Elderly</a></li>
 					</ul>
 				</div>
 			</div>
