--- a/html/mobile/index.html
+++ b/html/mobile/index.html
@@ -254,7 +254,7 @@
 		//Function used to simulate something was already on the server
 		function createFilter(tags) 
 			{
-				$.post("http://localhost:8000/filters",
+				$.post("http://"+window.location.hostname+":8000/filters",
 				// Add your ip here to test with mobile device
 		//		$.post("http://92.243.30.77:8000/filters",
 					{
