Added twitter tile

--- a/html/mosaic/index.html
+++ b/html/mosaic/index.html
@@ -22,7 +22,7 @@
 
     <iframe class="tile row4 col2" src="tiles/session.html#H"></iframe>
 
-    <iframe class="tile row5 col1" src="tiles/seesion.html"></iframe>
+    <iframe class="tile row5 col1" src="tiles/twitter.html" scrolling="no"></iframe>
 
     <iframe class="tile row5 col2" src="tiles/session.html"></iframe>
 
