--- a/html/mosaic/index.html
+++ b/html/mosaic/index.html
@@ -24,7 +24,7 @@
 
     <iframe class="tile row5 col1" src="tiles/twitter.html" scrolling="no"></iframe>
 
-    <iframe class="tile row5 col2" src="tiles/session.html"></iframe>
+    <iframe class="tile row5 col2" src="tiles/announcement.html" scrolling="no"></iframe>
 
 </div>
 </body>
