--- a/html/mosaic/tiles/announcement.html
+++ b/html/mosaic/tiles/announcement.html
@@ -3,28 +3,16 @@
 <head>
     <link rel="stylesheet" type="text/css" href="../css/tile.css" />
     <link rel="stylesheet" type="text/css" href="../css/tiles/announcement.css" />
-    <link rel="stylesheet" type="text/css" href="/lib/twitter.css" />
-    <link href='http://fonts.googleapis.com/css?family=Magra:400,700' rel='stylesheet' type='text/css'>
 
-    <script type="text/javascript" src="/lib/jquery.min.js"></script>
-
-    <script type="text/javascript" src="/lib/twitter.js"></script>    
+    <script type="text/javascript" src="/lib/jquery.min.js"></script>  
 </head>
 <body>
 
-    <div id="left">
-        <div id="announcement">
-            Don't forget, Posters and Interactivity are also open right now in the Maillot Hall!
-        </div>
-
-        <img src="../imgs/logo.png" id="logo" />
+    <div id="announcement">
+        This is an important announcement from the CHI Powers That Be. Read me and take note, for this is serious business. 
     </div>
 
-    <div id="right">
-        <div id="twitter">
-
-        </div>
-    </div>
+    <img src="../imgs/logo.png" id="logo" />
 
 </body>
 </html>
