--- a/html/mobile/new.html
+++ b/html/mobile/new.html
@@ -4,12 +4,13 @@
 	<title>Interactive Schedule</title> 
 	<meta name="viewport" content="user-scalable=no, width=device-width, initial-scale=1"> 
 	<link rel="stylesheet" href="http://code.jquery.com/mobile/1.2.0/jquery.mobile-1.2.0.min.css" />
+	<link rel="stylesheet" href="css/mobile.css" />
 	<script src="http://code.jquery.com/jquery-1.8.2.min.js"></script>
 	<script src="http://code.jquery.com/mobile/1.2.0/jquery.mobile-1.2.0.min.js"></script>
 
 		<script type="text/javascript">
 		var glanceHost = "92.243.30.77:8000";
-
+		var selectedKeyword;
 		function queryURL(url) {
 			if (window.location.host == glanceHost)
 				return '/'+url;
@@ -120,8 +121,8 @@ function showFilter( urlObj, options )
 			
 			// Find the h1 element in our header and inject the name of
 			// the category into it.
-			$header.find( "h1" ).html( "CHI'13" );
-			$header.html("<button onclick='test()'>Back</button>")
+			// $header.html( "<h1>CHI'13</h1>" );
+			// $header.html("<button id='back' onclick='reload()'>Back</button><h3 style='display:inline;'>CHI'13</h3>")
 
 			// Inject the category items markup into the content element.
 			$content.html( markup );
@@ -179,29 +180,53 @@ function showFilter( urlObj, options )
 
 	function generateSearchKeyWordsMarkup(data){
 		// markup = "<button onclick='test()'>Back</button>";
-		markup = "<ul data-role='listview' data-inset='true' data-filter='true'>";
+		markup = "<button id='back' onclick='reload()'>Back</button>";
+		markup += "<button id='show' onclick='postFilter()'>Show</button>";
+		markup += "<div id='top'><h4> Search videos related to: </h4>";
+		markup += "<span id='selected'></span></div>";
+		markup += "<ul data-role='listview' data-inset='true' data-filter='true'>";
 			data.sort();
-			var keyword;
+			console.log(data.length);
+			var keyword,id;
 			for(var i =0; i<data.length; i++){
 				keyword = data[i];
-				markup += "<li><a href='#' onclick='postFilter("+ "\"" + keyword + "\"" +")'>"+keyword + "</a></li>";
+				// markup += "<li class='keyword'><a href='#' onclick='postFilter("+ "\"" + keyword + "\"" +")'>"+keyword + "</a></li>";
+				markup += "<li class='keyword' id=" + "\"" +i + "\"" + " onclick='selectFilter("+ "\"" + keyword + "\"" +","+ i +")'>"+keyword + "</li>";
 			}
 			markup += "</ul>";
 			return markup;
 	}	
 
-	function test(){
+	function reload(){
 		window.location.reload(true);
 	}
 
 
-    function postFilter(tags) {	
+    function selectFilter(tag,id) {	
+    	selectedKeyword = tag;
+		 $('.keyword').css('background-color','rgb(238, 238, 238)');
+		 $("#"+id).css("background-color","rgba(166,166,166,1)");
+		 $('#show').css("visibility","visible");
+		 $('#selected').text(tag);
+	};
+
+	function postFilter(){
+		// window.location.reload(true);
+
+		$('input[data-type="search"]').val('').trigger("change");
+		$('#show').css("visibility","hidden");
+		$('#selected').text("");
+
+		$('.keyword').css('background-color','rgb(238, 238, 238)');
+
+		$('html, body').stop().animate({ scrollTop : 0 }, 500);
+		alert("posted to screen");
 		//$.post("http://localhost:8000/filters",
 		// Add your ip here to test with mobile device
 		// $.post("http://92.243.30.77:8000/filters",
 		 $.post("http://92.243.30.77:8000/filters",	
 			{
-				"all": tags,
+				"all": selectedKeyword,
 				"when": "now",
 				"volatile": true//,
 				// "tile": tagTileId
@@ -210,7 +235,19 @@ function showFilter( urlObj, options )
 			{
 				console.log("Updated session: " + data);
 			});
-	}
+	};
+
+
+
+	// $('.ui-icon-delete').on("click", function(){
+	// 	console.log("entered");
+	// 	$('.keyword').css('background-color','rgb(238, 238, 238)');
+	// 	$('#show').css("visibility","hidden");
+	// });
+
+	$('.ui-content').on('click', '.ui-input-clear', function(e){
+	    alert('click!');
+	});
 
 	</script>
 </head> 
@@ -218,12 +255,12 @@ function showFilter( urlObj, options )
 
 <div data-role="page" id="home" data-dom-cache="true">
 
-	<div data-role="header">
+	<div data-role="header"  data-position="fixed">
 		<h1>CHI'13</h1>
 	</div><!-- /header -->
 
     <div data-role="content">
-    	<h2> Select a screen </h2>
+    	<h3> Which screen are you looking at? </h3>
 		<ul  id="screen_list" data-role="listview" data-filter="false">
  			<li><h3><a href="#home?filter=autocompletelist" data-transition="slide">Screen 1</a></h3></li>
  			<li><h3><a href="#home?filter=autocompletelist" data-transition="slide">Screen 2</a></h3></li>
