--- a/html/mobile/new.html
+++ b/html/mobile/new.html
@@ -3,10 +3,10 @@
 <head> 
 	<title>Interactive Schedule</title> 
 	<meta name="viewport" content="user-scalable=no, width=device-width, initial-scale=1"> 
-	<link rel="stylesheet" href="http://code.jquery.com/mobile/1.2.0/jquery.mobile-1.2.0.min.css" />
+	<link rel="stylesheet" href="css/jquery.mobile-1.3.0.min.css" />
 	<link rel="stylesheet" href="css/mobile.css" />
-	<script src="http://code.jquery.com/jquery-1.8.2.min.js"></script>
-	<script src="http://code.jquery.com/mobile/1.2.0/jquery.mobile-1.2.0.min.js"></script>
+	<script src="js/jquery-1.8.3.min.js"></script>
+	<script src="js/jquery.mobile-1.3.0.min.js"></script>
 
 		<script type="text/javascript">
 		var glanceHost = "92.243.30.77:8000";
@@ -181,10 +181,12 @@ function showFilter( urlObj, options )
 	function generateSearchKeyWordsMarkup(data){
 		// markup = "<button onclick='test()'>Back</button>";
 		markup = "<button id='back' onclick='reload()'>Back</button>";
-		markup += "<button id='show' onclick='postFilter()'>Show</button>";
-		markup += "<div id='top'><h4> Search videos related to: </h4>";
+		markup += "<button id='show' onclick='postFilter()'>Show on screen</button>";
+		markup += "<div id='top'><h4> Search videos for ongoing events related to: </h4>";
 		markup += "<span id='selected'></span></div>";
-		markup += "<ul data-role='listview' data-inset='true' data-filter='true'>";
+		// markup += "<ul data-role='listview' data-inset='true' data-filter='true'>";
+		markup += "<ul data-role='listview' data-inset='false' data-filter='true' data-filter-reveal='true' data-filter-placeholder='Search everything'>";
+
 			data.sort();
 			console.log(data.length);
 			var keyword,id;
