--- a/html/mobile/new.html
+++ b/html/mobile/new.html
@@ -5,6 +5,7 @@
 	<meta name="viewport" content="user-scalable=no, width=device-width, initial-scale=1"> 
 	<link rel="stylesheet" href="css/jquery.mobile-1.3.0.min.css" />
 	<link rel="stylesheet" href="css/mobile.css" />
+	<script src="js/NativeBridge.js"></script>
 	<script src="js/jquery-1.8.3.min.js"></script>
 	<script src="js/jquery.mobile-1.3.0.min.js"></script>
 
@@ -271,6 +272,9 @@ function showFilter( urlObj, options )
  			<li><h3><a href="#home?filter=autocompletelist" data-transition="slide">Screen 5</a></h3></li>
  			<li><h3><a href="#home?filter=autocompletelist" data-transition="slide">Screen 6</a></h3></li>
 		</ul>
+		<input type="button" value='addToSchedule' onClick="NativeBridge.call('addToSchedule','chi108',thisiscallback)"><br />
+        <input type="button" value='removeFromSchedule' onClick="NativeBridge.call('removeFromSchedule','chi108',thisiscallback)"><br />
+        <input type="button" value='isInSchedule' onClick="NativeBridge.call('isInSchedule','chi108',thisiscallback)">
     </div>
 
 </div><!-- /page -->
