--- a/html/mobile/search_ajax.html
+++ b/html/mobile/search_ajax.html
@@ -232,17 +232,17 @@
             $ul.html( "<li><div class='ui-loader'><span class='ui-icon ui-icon-loading'></span></div></li>" );
             $ul.listview( "refresh" );
             $.ajax({
-                // url: "http://92.243.30.77:8000/autocompletelist",
-                 url: "http://gd.geobytes.com/AutoCompleteCity",
+                url: "http://92.243.30.77:8000/autocompletelist",
+                // url: "http://gd.geobytes.com/AutoCompleteCity",
                 dataType: "jsonp",
                 crossDomain: true,
                 data: {
-                    q: $input.val()
+                    substring: $input.val()
                 }
             })
             .then( function ( response ) {
                 $.each( response, function ( i, val ) {
-                    html += "<li>" + val + "</li>";
+                    html += "<li>" + i + "</li>";
                 });
                 $ul.html( html );
                 $ul.listview( "refresh" );
